force-app/main/default/objects/Project__c/fields/Delivery_Manager__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Manager</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>